Deleted html output and kept github_document output.

--- a/R-Markdown/R-markdown_SimpleTest.Rmd
+++ b/R-Markdown/R-markdown_SimpleTest.Rmd
@@ -2,7 +2,7 @@
 title: "R-Markdown Test"
 author: "Tom Versluijs"
 date: "2023-05-09"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
