--- a/R-Markdown/R-markdown_test.Rmd
+++ b/R-Markdown/R-markdown_test.Rmd
@@ -2,9 +2,7 @@
 title: "RGEE MODIS - Calculate the date of snowmelt for all pixels within an area of interest (shapefile)"
 author: "Tom Versluijs"
 date: "`r Sys.Date()`"
-output: 
-  html_document:
-    keep_md: TRUE
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
